--- a/web/src/app.html
+++ b/web/src/app.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
     <script>
-      /**
-       * Prevent FOUC on page load.
-       */
-      const theme = localStorage.getItem('color-theme') || 'dark';
-      if (theme === 'light') {
-        document.documentElement.classList.remove('dark');
+      // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+      if (window.matchMedia('(prefers-color-scheme: dark)').matches){
+        document.documentElement.classList.add('dark')
+      } else {
+        document.documentElement.classList.remove('dark')
       }
     </script>
   </head>
